home page content finished

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce Web Site</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
+      <div class="header">
     <div class="container">
       <div class="navbar">
         <div class="logo">
@@ -16,17 +20,25 @@
         <nav>
           <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">Producta</a></li>
+            <li><a href="">Products</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="">Account</a></li>
           </ul>
         </nav>
+        <img src="images/cart.png" width="30px" height="30px">
       </div>
       <div class="row">
-          <div></div>
-
+          <div class="col-2">
+             <h1>Give Your Workout  <br>  A new Style!</h1> 
+             <p> Success is never accidental. This is a style <br>of choice.</p>
+             <a href="" class="btn">Explore Now &#8594;</a>
+          </div>
+          <div class="col-2">
+              <img src="images/image1.png">
+          </div>
       </div>
     </div>
+</div>
   </body>
 </html>
