--- a/index.html
+++ b/index.html
@@ -6,39 +6,214 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce Web Site</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
   <body>
-      <div class="header">
-    <div class="container">
-      <div class="navbar">
-        <div class="logo">
-          <img src="images/logo.png" width="125px" />
+    <div class="header">
+      <div class="container">
+        <div class="navbar">
+          <div class="logo">
+            <img src="images/logo.png" width="125px" />
+            
+          </div>
+          <nav>
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">Products</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Contact</a></li>
+              <li><a href="">Account</a></li>
+            </ul>
+          </nav>
+          <img src="images/cart.png" width="30px" height="30px" />
         </div>
-        <nav>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Account</a></li>
-          </ul>
-        </nav>
-        <img src="images/cart.png" width="30px" height="30px">
-      </div>
-      <div class="row">
+        <div class="row">
           <div class="col-2">
-             <h1>Give Your Workout  <br>  A new Style!</h1> 
-             <p> Success is never accidental. This is a style <br>of choice.</p>
-             <a href="" class="btn">Explore Now &#8594;</a>
+            <h1>
+              Give Your Workout <br />
+              A new Style!
+            </h1>
+            <p>Success is never accidental. This is a style <br />of choice.</p>
+            <a href="" class="btn">Explore Now &#8594;</a>
           </div>
           <div class="col-2">
-              <img src="images/image1.png">
+            <img src="images/image1.png" />
           </div>
+        </div>
       </div>
     </div>
-</div>
+    <div class="categories">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-3">
+            <img src="images/category-1.jpg" />
+          </div>
+          <div class="col-3">
+            <img src="images/category-2.jpg" />
+          </div>
+          <div class="col-3">
+            <img src="images/category-3.jpg" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="small-container">
+      <h2 class="title">Featured Products</h2>
+      <div class="row">
+        <div class="col-4">
+          <img src="images/product-1.jpg" />
+          <h4>Red Printed T-Shirt</h4>
+          <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+          </div>
+          <p>$50.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/product-2.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
+            <p>$90.00</p>
+          </div>
+          <div class="col-4">
+            <img src="images/product-3.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
+            <p>$150.00</p>
+          </div>
+          <div class="col-4">
+            <img src="images/product-4.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
+            <p>$80.00</p>
+          </div>
+      </div>
+      <h2 class="title"> Latest Products</h2>
+      <div class="row">
+        <div class="col-4">
+          <img src="images/product-5.jpg" />
+          <h4>Red Printed T-Shirt</h4>
+          <div class="rating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+          </div>
+          <p>$175.00</p>
+        </div>
+        <div class="col-4">
+            <img src="images/product-6.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
+            <p>$80.00</p>
+          </div>
+          <div class="col-4">
+            <img src="images/product-7.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
+            <p>$40.00</p>
+          </div>
+          <div class="col-4">
+            <img src="images/product-8.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star" ></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+            </div>
+            <p>$250.00</p>
+          </div>
+          <div class="col-4">
+            <img src="images/product-9.jpg" />
+            <h4>Red Printed T-Shirt</h4>
+            <div class="rating">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+            </div>
+            <p>$50.00</p>
+          </div>
+          <div class="col-4">
+              <img src="images/product-10.jpg" />
+              <h4>Red Printed T-Shirt</h4>
+              <div class="rating">
+                  <i class="fa fa-star" ></i>
+                  <i class="fa fa-star" ></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+              </div>
+              <p>$90.00</p>
+            </div>
+            <div class="col-4">
+              <img src="images/product-11.jpg" />
+              <h4>Red Printed T-Shirt</h4>
+              <div class="rating">
+                  <i class="fa fa-star" ></i>
+                  <i class="fa fa-star" ></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+              </div>
+              <p>$150.00</p>
+            </div>
+            <div class="col-4">
+              <img src="images/product-12.jpg" />
+              <h4>Red Printed T-Shirt</h4>
+              <div class="rating">
+                  <i class="fa fa-star" ></i>
+                  <i class="fa fa-star" ></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+              </div>
+              <p>$80.00</p>
+            </div>
+      </div>
+    </div>
   </body>
 </html>
