--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p>$80.00</p>
           </div>
       </div>
-      <h2 class="title"> Latest Products</h2>
+      <h2 class="title">Latest Products</h2>
       <div class="row">
         <div class="col-4">
           <img src="images/product-5.jpg" />
@@ -214,6 +214,93 @@
               <p>$80.00</p>
             </div>
       </div>
+    </div>
+    <div class="offer">
+        <div class="small-contain">
+            <div class="row">
+                <div class="col-2">
+                    <img src="images/exclusive.png" class="offer-img">
+                </div>
+                <div class="col-2">
+                    <p> Exclusively Available on RedStore</p>
+                    <h1>Smart Band 6</h1>
+                    <small> Mi Smart Band 6O Step ForwardThe #1 wearable wristband brand in
+                         the world.<br> Distinctive edges Impressive classic design Following the 
+                         classic design,<br> Mi Smart Band 6  has a more comfortable
+                         use and appearance with its innovative
+                         <br> large screen and rounded edges.<br>
+                        </small>
+                    <a href="" class="btn"> Buy Now &#8594;</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="testimonial">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-3">
+                    <i class="fa fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ratione laborum aspernatur optio, neque porro delectus at expedita vitae, ut nobis magnam omnis quos voluptas repudiandae sint.</p>
+                    <div class="rating">
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <img src="images/user-1.png"/>
+                    <h3>Sean Parker</h3>
+                </div>
+                <div class="col-3">
+                    <i class="fa fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ratione laborum aspernatur optio, neque porro delectus at expedita vitae, ut nobis magnam omnis quos voluptas repudiandae sint.</p>
+                    <div class="rating">
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <img src="images/user-2.png"/>
+                    <h3>Mike Smith</h3>
+                </div>
+                <div class="col-3">
+                    <i class="fa fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ratione laborum aspernatur optio, neque porro delectus at expedita vitae, ut nobis magnam omnis quos voluptas repudiandae sint.</p>
+                    <div class="rating">
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <img src="images/user-3.png"/>
+                    <h3>Mabel Joe</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="brands">
+        <div class="small-container">
+            <div class="row">
+            <div class="col-5">
+                <img src="images/logo-godrej.png" />
+            </div>
+            <div class="col-5">
+                <img src="images/logo-coca-cola.png" />
+            </div>
+            <div class="col-5">
+                <img src="images/logo-paypal.png" />
+            </div>
+            <div class="col-5">
+                <img src="images/logo-philips.png" />
+            </div>
+            <div class="col-5">
+                <img src="images/logo-oppo.png" />
+            </div>
+
+            </div>
+        </div>
     </div>
   </body>
 </html>
