--- a/products.html
+++ b/products.html
@@ -19,19 +19,19 @@
       <div class="container">
         <div class="navbar">
           <div class="logo">
-            <img src="images/logo.png" width="125px" />
+            <a href="index.html"><img src="images/logo.png" width="125px" /></a>
             
           </div>
           <nav>
             <ul id="MenuItems">
-              <li><a href="">Home</a></li>
-              <li><a href="">Products</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="products.html">Products</a></li>
               <li><a href="">About</a></li>
               <li><a href="">Contact</a></li>
-              <li><a href="">Account</a></li>
+              <li><a href="account.html">Account</a></li>
             </ul>
           </nav>
-          <img src="images/cart.png" width="30px" height="30px" />
+          <a href="cart.html"><img src="images/cart.png" width="30px" height="30px" /></a>
           <img src="images/menu.png" class="menu-icon" onclick="menutoggle()"/>
         </div>
  
@@ -50,8 +50,8 @@
         </div>
       <div class="row">
         <div class="col-4">
-          <img src="images/product-1.jpg" />
-          <h4>Red Printed T-Shirt</h4>
+          <a href="product-detail-page.html"><img src="images/product-1.jpg" /></a>
+          <a href="product-detail-page.html"><h4>Red Printed T-Shirt</h4></a>
           <div class="rating">
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
